@@ -16,6 +16,7 @@ import edu.colorado.phet.common.piccolophet.nodes.PhetPPath;
 import edu.colorado.phet.common.piccolophet.simsharing.SimSharingDragHandler;
 import edu.colorado.phet.fractions.FractionsResources.Images;
 import edu.colorado.phet.fractions.util.FJUtils;
+import edu.colorado.phet.fractionsintro.intro.model.Fraction;
 import edu.umd.cs.piccolo.PNode;
 import edu.umd.cs.piccolo.activities.PActivity;
 import edu.umd.cs.piccolo.activities.PActivity.PActivityDelegate;
@@ -159,5 +160,13 @@ public class ContainerNode extends PNode {
             }
         }
         return List.iterableList( children );
+    }
+
+    public Fraction getFractionValue() {
+        return Fraction.sum( getChildPieces().map( new F<RectangularPiece, Fraction>() {
+            @Override public Fraction f( final RectangularPiece r ) {
+                return r.toFraction();
+            }
+        } ) );
     }
 }
